fix dashboard menu on landing page

--- a/templates/fragments/_landing_header.html.twig
+++ b/templates/fragments/_landing_header.html.twig
@@ -21,7 +21,7 @@
                     </svg>
                 </span>
             </button>
-            <ul class="bg-white px-3 transform scale-0 group-hover:scale-100 absolute transition duration-150 ease-in-out origin-top"
+            <ul class="bg-white px-3 transform scale-0 group-hover:scale-100 absolute transition duration-150 ease-in-out origin-top z-50"
                 style="min-width: 8rem">
                 <li class="rounded-sm px-4 py-1 hover:bg-slate-100">
                     <a class=" text-slate-600 hover:text-blue-600 text-xl" href="{{ path('app_dashboard') }}">
