--- a/templates/dashboard/settings.html.twig
+++ b/templates/dashboard/settings.html.twig
@@ -14,15 +14,28 @@
                 <div class="md:flex items-center mt-12 gap-4">
                     <div class="w-full md:w-1/2 flex flex-col">
 
-                        {{ form_label(form.backgroundColor, null, {label_attr: {'class': 'font-semibold leading-none block' }}) }}
+                        <div class="color-picker" {{ stimulus_controller('color-picker') }}>
+                            {{ form_label(form.backgroundColor, null, {label_attr: {'class': 'font-semibold leading-none block' }}) }}
 
-                        {{ form_widget(form.backgroundColor, {attr: {'class': 'leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10'}}) }}
+                            {{ form_widget(form.backgroundColor, {
+                                attr: {
+                                    'class': 'leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10',
+                                    'data-color-picker-target': 'colorInput'
+                                }}) }}
+                        </div>
                     </div>
                     <div class="w-full md:w-1/2 flex flex-col">
 
-                        {{ form_label(form.textColor, null, {label_attr: {'class': 'font-semibold leading-none block' }}) }}
+                        <div class="color-picker" {{ stimulus_controller('color-picker') }}>
+                            {{ form_label(form.textColor, null, {label_attr: {'class': 'font-semibold leading-none block' }}) }}
 
-                        {{ form_widget(form.textColor, {attr: {'class': 'leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10'}}) }}
+                            {{ form_widget(form.textColor, {
+                                attr: {
+                                    'class': 'leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10',
+                                    'data-color-picker-target': 'colorInput'
+                                }}) }}
+                        </div>
+
                     </div>
                 </div>
 
