--- a/templates/dashboard/settings.html.twig
+++ b/templates/dashboard/settings.html.twig
@@ -7,7 +7,7 @@
     <div class="w-full">
         <div class="bg-gradient-to-b from-blue-700 to-blue-500 h-96"></div>
         <div class="max-w-5xl mx-auto px-6 sm:px-6 lg:px-8 mb-12 mt-12">
-            <div class="bg-white w-full shadow rounded p-8 sm:p-12 -mt-72">
+            <div class="bg-white w-full shadow rounded p-8 sm:p-3 -mt-72">
                 <p class="text-3xl font-bold leading-7 text-center">Colors for links</p>
                 {{ form_start(form) }}
 
@@ -58,7 +58,7 @@
                                     'data-color-picker-target': 'colorInput'
                                 }}) }}
 
-                            <div data-color-picker-target="gradient"></div>
+                            <div data-color-picker-target="picker"></div>
                         </div>
                     </div>
                     <div class="w-full md:w-1/2 flex flex-col">
@@ -106,7 +106,7 @@
                                     'data-color-picker-target': 'colorInput'
                                 }}) }}
 
-                            <div data-color-picker-target="gradient"></div>
+                            <div data-color-picker-target="picker"></div>
                         </div>
 
                     </div>
