--- a/templates/dashboard/settings.html.twig
+++ b/templates/dashboard/settings.html.twig
@@ -7,7 +7,7 @@
     <div class="w-full">
         <div class="bg-gradient-to-b from-blue-700 to-blue-500 h-96"></div>
         <div class="max-w-5xl mx-auto px-6 sm:px-6 lg:px-8 mb-12 mt-12">
-            <div class="bg-white w-full shadow rounded p-8 sm:p-3 -mt-72">
+            <div class="bg-white w-full shadow rounded p-8 sm:py-12 sm:px-3 -mt-72">
                 <p class="text-3xl font-bold leading-7 text-center">Colors for links</p>
                 {{ form_start(form) }}
 
@@ -17,7 +17,7 @@
                         <div class="color-picker" {{ stimulus_controller('color-picker') }}>
 
                             <span class="flex flex-row gap-2">
-                                {{ form_label(form.backgroundColor, null, {label_attr: {'class': 'font-semibold leading-none block' }}) }}
+                                {{ form_label(form.backgroundColor, null, {label_attr: {'class': 'font-semibold leading-none block mb-2' }}) }}
 
                                 <svg xmlns="http://www.w3.org/2000/svg"
                                      class="icon icon-tabler icon-tabler-shadow cursor-pointer"
@@ -54,11 +54,11 @@
 
                             {{ form_widget(form.backgroundColor, {
                                 attr: {
-                                    'class': 'leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10',
+                                    'class': 'hidden leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10',
                                     'data-color-picker-target': 'colorInput'
                                 }}) }}
 
-                            <div data-color-picker-target="picker"></div>
+                            <div data-color-picker-target="picker" class="py-4"></div>
                         </div>
                     </div>
                     <div class="w-full md:w-1/2 flex flex-col">
@@ -66,7 +66,7 @@
                         <div class="color-picker" {{ stimulus_controller('color-picker') }}>
 
                             <span class="flex flex-row gap-2">
-                                {{ form_label(form.textColor, null, {label_attr: {'class': 'font-semibold leading-none block' }}) }}
+                                {{ form_label(form.textColor, null, {label_attr: {'class': 'font-semibold leading-none block mb-2' }}) }}
 
                                 <svg xmlns="http://www.w3.org/2000/svg"
                                      class="icon icon-tabler icon-tabler-shadow cursor-pointer"
@@ -102,11 +102,11 @@
 
                             {{ form_widget(form.textColor, {
                                 attr: {
-                                    'class': 'leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10',
+                                    'class': 'hidden leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10',
                                     'data-color-picker-target': 'colorInput'
                                 }}) }}
 
-                            <div data-color-picker-target="picker"></div>
+                            <div data-color-picker-target="picker" class="py-4"></div>
                         </div>
 
                     </div>
