--- a/templates/site/links.html.twig
+++ b/templates/site/links.html.twig
@@ -7,7 +7,7 @@
 
 {% block body %}
     <div class="relative mx-auto flex w-full items-center justify-center font-sans flex-grow"
-         style="background-color: {{ user.backgroundColor|default('#fff') }}">
+         style="background: {{ user.backgroundColor|default('#fff') }}">
         <div class="relative sm:max-w-sm w-full px-6 md:px-0">
             {% for link in user.links %}
                 <div class="link">
