added color picker in color form and settings to dashboard dropdown

--- a/templates/fragments/_landing_header.html.twig
+++ b/templates/fragments/_landing_header.html.twig
@@ -33,6 +33,11 @@
                         Colors
                     </a>
                 </li>
+                <li class="rounded-sm px-4 py-1 hover:bg-slate-100">
+                    <a class=" text-slate-600 hover:text-blue-600 text-xl" href="{{ path('app_user_edit') }}">
+                        Settings
+                    </a>
+                </li>
             </ul>
         </div>
 
