color form fixed for gradient

--- a/templates/color/show.html.twig
+++ b/templates/color/show.html.twig
@@ -24,7 +24,7 @@
                     <div class="flex flex-col">
                         <span class="font-semibold leading-none block px-2">Value</span>
                         <div class="leading-none text-slate-900 mt-4 rounded w-full h-10 px-2"
-                             style="background-color: {{ color.value }}">{{ color.value }}</div>
+                             style="background: {{ color.value }}">{{ color.value }}</div>
                     </div>
 
                     <div class="flex flex-col">
