showing color text and name, and color of text adaptation

--- a/templates/fragments/_landing_header.html.twig
+++ b/templates/fragments/_landing_header.html.twig
@@ -7,6 +7,10 @@
            class="font-bold text-xl p-2 md:p-4 text-slate-600 hover:text-blue-600">
             Links
         </a>
+        <a href="{{ path('app_user_colors', {name: user.name}) }}"
+           class="font-bold text-xl p-2 md:p-4 text-slate-600 hover:text-blue-600">
+            Colors
+        </a>
         <div class="group inline-block">
             <button class="outline-none focus:outline-none bg-white flex items-center"
                     style="min-width: 8rem">
