--- a/templates/site/colors.html.twig
+++ b/templates/site/colors.html.twig
@@ -6,6 +6,10 @@
 {% endblock %}
 
 {% block body %}
-    <div {{ stimulus_controller('color',{colors: colors,refreshInterval:3000}) }} class="flex-grow"
-                                                                                  style="transition: all 0.75s ease;"></div>
+    <div {{ stimulus_controller('color',{colors: colors,refreshInterval:3000}) }}
+            class="flex-grow flex flex-col"
+            style="transition: all 0.75s ease;">
+        <h1 class="text-center w-full py-4 text-2xl font-bold" data-color-target="name">Name</h1>
+        <p class="text-center w-full self-center text-base" style="margin: auto 0;" data-color-target="text">text</p>
+    </div>
 {% endblock %}
