added transition function and transition duration

--- a/templates/fragments/_admin_header.html.twig
+++ b/templates/fragments/_admin_header.html.twig
@@ -7,6 +7,10 @@
            class="font-bold text-xl p-4 text-slate-600 hover:text-blue-600">
             Links
         </a>
+        <a href="{{ path('app_user_colors', {name: app.user.name}) }}"
+           class="font-bold text-xl p-4 text-slate-600 hover:text-blue-600">
+            Colors
+        </a>
         <a href="{{ path('app_user_edit') }}"
            class="font-bold text-xl p-4 text-slate-600 hover:text-blue-600">Settings</a>
 
