--- a/templates/dashboard/settings.html.twig
+++ b/templates/dashboard/settings.html.twig
@@ -4,7 +4,15 @@
 
 {% block body %}
 
-    <div class="w-full">
+    <div class="w-full relative">
+        {% if is_granted('ROLE_USER') %}
+            <div class="max-w-5xl mx-auto px-6 sm:px-6 lg:px-8 mb-12 mt-12 absolute right-0">
+                <a class="mt-9 font-semibold leading-none text-white py-4 px-10 bg-orange-500 rounded hover:bg-orange-600 focus:ring-2 focus:ring-offset-2 focus:ring-orange-700 focus:outline-none"
+                   href="{{ path('app_2fa_enable') }}">
+                    Enable 2fa
+                </a>
+            </div>
+        {% endif %}
         <div class="bg-gradient-to-b from-blue-700 to-blue-500 h-96"></div>
         <div class="max-w-5xl mx-auto px-6 sm:px-6 lg:px-8 mb-12 mt-12">
             <div class="bg-white w-full shadow rounded p-8 sm:py-12 sm:px-3 -mt-72">
@@ -113,6 +121,32 @@
                         </div>
 
                     </div>
+
+                </div>
+
+                <h2 class="w-full my-4 font-bold text-xl pt-4">Transition settings for Color view</h2>
+                <div class="w-full flex flex-col md:flex-row gap-8">
+                    <div class="w-full md:w-1/2">
+                        {{ form_label(form.transitionFunction, null, {label_attr: {'class': 'font-semibold leading-none block mb-2' }}) }}
+
+                        {{ form_widget(form.transitionFunction, {
+                            attr: {
+                                'class': 'leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10 px-4',
+                                'prompt': 'Choose...'
+                            }}) }}
+                    </div>
+                    <div class="w-full md:w-1/2">
+                        {{ form_label(form.transitionDuration, 'Transition duration (in seconds 0.1 - 999)', {label_attr: {'class': 'font-semibold leading-none block mb-2' }}) }}
+
+                        {{ form_widget(form.transitionDuration, {
+                            attr: {
+                                'class': 'leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10 px-4',
+                                'type': 'number',
+                                'step': '0.01',
+                                'max': '999',
+                                'min': '0.1'
+                            }}) }}
+                    </div>
                 </div>
 
                 <div class="flex items-center w-full">
@@ -126,14 +160,7 @@
             </div>
         </div>
 
-        <div class="max-w-5xl mx-auto px-6 sm:px-6 lg:px-8 mb-12 mt-12">
-            {% if is_granted('ROLE_USER') %}
-                <a class="mt-9 font-semibold leading-none text-white py-4 px-10 bg-orange-500 rounded hover:bg-orange-600 focus:ring-2 focus:ring-offset-2 focus:ring-orange-700 focus:outline-none"
-                   href="{{ path('app_2fa_enable') }}">
-                    Enable 2fa
-                </a>
-            {% endif %}
-        </div>
+
     </div>
 
 {% endblock %}
