--- a/templates/dashboard/settings.html.twig
+++ b/templates/dashboard/settings.html.twig
@@ -121,7 +121,43 @@
                         </div>
 
                     </div>
+                </div>
 
+                <h2 class="w-full my-4 font-bold text-xl pt-4">Settings for Link buttons</h2>
+                <div class="w-full flex flex-col md:flex-row gap-8">
+                    <div class="w-full md:w-1/2">
+                        {{ form_label(form.textSize, 'Text size (in rem)', {label_attr: {'class': 'font-semibold leading-none block mb-2' }}) }}
+                        {{ form_widget(form.textSize, {
+                            attr: {
+                                'class': 'leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10 px-4',
+                                'prompt': 'Choose...',
+                                'step': 0.01,
+                                'min': 0.7,
+                                'max': 2,
+                            }}) }}
+                    </div>
+                    <div class="w-full md:w-1/2">
+                        {{ form_label(form.borderSize, 'Border size (in px)', {label_attr: {'class': 'font-semibold leading-none block mb-2' }}) }}
+                        {{ form_widget(form.borderSize, {
+                            attr: {
+                                'class': 'leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10 px-4',
+                                'prompt': 'Choose...',
+                                'step': 1,
+                                'min': 0,
+                                'max': 50,
+                            }}) }}
+                    </div>
+                    <div class="w-full md:w-1/2">
+                        {{ form_label(form.borderRadius, 'Border radius (in px)', {label_attr: {'class': 'font-semibold leading-none block mb-2' }}) }}
+                        {{ form_widget(form.borderRadius, {
+                            attr: {
+                                'class': 'leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10 px-4',
+                                'prompt': 'Choose...',
+                                'step': 1,
+                                'min': 0,
+                                'max': 200,
+                            }}) }}
+                    </div>
                 </div>
 
                 <h2 class="w-full my-4 font-bold text-xl pt-4">Transition settings for Color view</h2>
@@ -156,7 +192,6 @@
                     </button>
                 </div>
                 {{ form_end(form) }}
-
             </div>
         </div>
 
