finished gradient on text

--- a/templates/site/links.html.twig
+++ b/templates/site/links.html.twig
@@ -11,13 +11,32 @@
         <div class="relative sm:max-w-sm w-full px-6 md:px-0">
             {% for link in user.links %}
                 <div class="link">
-                    <a href="{{ link.link }}" class="text-center p-4 mb-4 block js-user-link"
-                       data-link-id="{{ link.id }}"
-                       target="_blank"
-                       rel="nofollow"
-                       style="font-size:{{ user.textSize|default(1) }}rem;border: {{ user.borderSize|default(2) }}px solid {{ user.textColor|default('#000') }};color: {{ user.textColor|default('#000') }};border-radius: {{ user.borderRadius|default(0.25) }}rem">
-                        {{ link.name }}
-                    </a>
+
+                    {% set color = link.textColor|default(user.textColor)|default('#000000') %}
+                    {% if 'gradient' in color %}
+                        <a href="{{ link.link }}" class="text-center p-4 mb-4 block js-user-link"
+                           data-link-id="{{ link.id }}"
+                           target="_blank"
+                           rel="nofollow"
+                           style="background: {{ color }};
+                                   -webkit-background-clip: text;
+                                   -webkit-text-fill-color: transparent;
+                                   font-size:{{ user.textSize|default(1) }}rem;
+                                   border: {{ user.borderSize|default(2) }}px solid {{ user.textColor|default('#000') }};
+                                   border-radius: {{ user.borderRadius|default(0.25) }}px">
+                            {{ link.name }}
+                        </a>
+                    {% else %}
+                        <a href="{{ link.link }}" class="text-center p-4 mb-4 block js-user-link"
+                           data-link-id="{{ link.id }}"
+                           target="_blank"
+                           rel="nofollow"
+                           style="color: {{ color }};font-size:{{ user.textSize|default(1) }}rem;border: {{ user.borderSize|default(2) }}px solid {{ user.textColor|default('#000') }};border-radius: {{ user.borderRadius|default(0.25) }}px">
+                            {{ link.name }}
+                        </a>
+                    {% endif %}
+
+
                 </div>
             {% endfor %}
         </div>
