--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -24,6 +24,7 @@
                 <tr class="bg-slate-300 text-slate-600 uppercase text-sm leading-normal">
                     <th class="p-3">Name</th>
                     <th class="p-3 text-left">Link</th>
+                    <th class="p-3 text-left">Text color</th>
                     <th class="p-3 text-left">Visits</th>
                     <th class="p-3 text-left">Last visit</th>
                     <th class="p-3 text-left">Actions</th>
@@ -34,6 +35,7 @@
                     <tr class="text-slate-500 hover:bg-gray-100 border-b border-slate-300 {{ loop.index is divisible by 2 ? '' : 'bg-slate-100' }}">
                         <td class="p-3 text-center font-bold text-xl">{{ link.name }}</td>
                         <td class="p-3"><a href="{{ link.link }}">{{ link.link }}</a></td>
+                        <td class="p-3" style="background: {{ link.textColor }}">{{ link.textColor }}</td>
                         <td class="p-3">{{ link.linkVisits|length }}</td>
                         <td class="p-3">{{ link.latestVisit ? link.latestVisit.createdAt|ago : 'Not yet visited' }}</td>
                         <td class="p-3">
