ability to add custom metatags on pages

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -58,3 +58,8 @@ tr td:nth-child(1),
 tr th:nth-child(1) {
   border-radius: .625rem 0 0 .625rem;
 }
+
+/*
+[data-turbo-preview] body {
+  opacity: .2;
+}*/
