--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,6 +5,10 @@
 {% block header %}
 {% endblock %}
 
+{% block metas %}
+    <meta name="turbo-cache-control" content="no-preview">
+{% endblock %}
+
 {% block body %}
 
     <div class="relative mx-auto flex w-full items-center justify-center font-sans flex-grow bg-blue-dark-900 px-6 md:px-0">
