--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,5 +1,10 @@
 {% extends 'base.html.twig' %}
 
+{% block metas %}
+    <meta name="turbo-cache-control" content="no-preview">
+{% endblock %}
+
+
 {% block title %}Register!{% endblock %}
 
 {% block header %}
