--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Colors and links tree!{% endblock %}
+{% block title %}Links and colors!{% endblock %}
 
 {% block header %}
     {{ include('fragments/_landing_header.html.twig') }}
@@ -11,7 +11,7 @@
     <div class="relative mx-auto flex w-full justify-center font-sans flex-grow">
 
         <div class="w-full px-12 py-10 md:px-64 md:py-40">
-            <div class="text-4xl md:text-6xl font-bold prose">Welcome to linktree clone</div>
+            <div class="text-4xl md:text-6xl font-bold prose">Welcome to Linkify</div>
             <div class="text-base md:text-2xl prose">Now with ability to add and show your favourite colors</div>
         </div>
 
