updated title on landing

--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Links and colors!{% endblock %}
+{% block title %}Linkify - Links and colors!{% endblock %}
 
 {% block header %}
     {{ include('fragments/_landing_header.html.twig') }}
